Combine API and worker into single service for free tier

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -43,4 +43,5 @@ WORKDIR /app/apps/api
 
 EXPOSE 4000
 
-CMD ["bun", "run", "src/index.ts"]
+# Run both API and worker together
+CMD ["bun", "run", "start.ts"]
