--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,15 +6,13 @@
   "scripts": {
     "dev": "bun --env-file=../../.env --watch src/index.ts",
     "worker": "bun --env-file=../../.env --watch src/worker/suktaWorker.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "bun run start.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.3",
-    "ts-node": "^10.9.2"
+    "@types/node": "^25.0.3"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
@@ -25,6 +23,6 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
-     "@sukta/db": "workspace:*"
+    "@sukta/db": "workspace:*"
   }
 }
