fix: add REDIS_URL support and NEXT_PUBLIC_API_URL build arg for Railway

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 # Database (Neon PostgreSQL)
 DATABASE_URL='postgresql://user:password@host/database?sslmode=require'
 
-# Redis (use 'redis' as host when running with docker-compose)
+# Redis - Use REDIS_URL for Railway/production, or REDIS_HOST/PORT for local
+REDIS_URL=redis://default:password@host:port
+# Alternative: separate host/port/password
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
 
 # OpenRouter AI
 OPENROUTER_API_KEY=your_openrouter_api_key
