--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -15,6 +15,10 @@ COPY . .
 
 ENV NEXT_TELEMETRY_DISABLED=1
 
+# Accept API URL as build argument (required for NEXT_PUBLIC_ vars)
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
 WORKDIR /app/apps/web
 RUN bun run build
 
