--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,9 +3,11 @@
     "target": "ES2020",
     "module": "CommonJS",
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames":true
-  }
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["src/**/*", "start.ts"],
+  "exclude": ["node_modules", "dist"]
 }
